# grabarr

./: .env.example  .gitlab-ci.yml  .versionrc.json  CHANGELOG.md  Dockerfile  GITHUB_RELEASES.md  Makefile  README.md  alembic.ini  docker-compose.example.yml  docker-compose.yml  feature_requests.md  install-deps.sh  package.json  pyproject.toml  run.sh  start.sh  stop.sh
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json
.specify/memory/: constitution.md
docs/: configuration.md
docs/release/: README.md
grabarr/: .dockerignore  .gitignore  .gitlab-ci.yml  .versionrc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  GITHUB_RELEASES.md  Makefile  README.md  __init__.py  config.example.yaml  docker-compose.example.yml  docker-compose.yml  package.json  pyproject.toml  reset-downloads.sh  run.sh  use-public-dns.sh
grabarr/.specify/: feature.json
grabarr/.specify/integrations/: speckit.manifest.json
grabarr/.specify/workflows/: workflow-registry.json
grabarr/adapters/: _welib_template.py.example  audiobookbay.py  gutenberg.py  health.py  khinsider.py  myabandonware.py  romsfun.py  standard_ebooks.py  vimm.py  zlibrary.py
grabarr/api/: torznab.py
grabarr/cli/: main.py
grabarr/core/: categories.py  enums.py  logging.py  models.py  settings_model.py
grabarr/db/: session.py
grabarr/db/migrations/: env.py
grabarr/db/migrations/versions/: 0378792f14f7_add_search_tokens_purge_queued_downloads.py  068f4d43aff0_drop_unique_on_downloads_info_hash.py  ed92c7f86c84_add_query_column_to_search_tokens_and_.py
grabarr/docs/: DEVELOPING_ADAPTERS.md  troubleshooting.md
grabarr/docs/release/: README.md
grabarr/downloads/: async_streaming.py  search_tokens.py  service.py  sync.py
grabarr/grabarr/: __init__.py
grabarr/grabarr/adapters/: __init__.py  _rom_helpers.py  anna_archive.py  base.py  cdromance.py  edge_emulation.py  health_model.py  internet_archive.py  libgen.py  myabandonware.py  romsfun.py  vimm.py  zlibrary.py
grabarr/grabarr/api/: admin.py  app.py  health.py  metrics.py  torznab.py
grabarr/grabarr/bypass/: click_driver.py  models.py  service.py
grabarr/grabarr/cli/: seed_defaults.py
grabarr/grabarr/core/: categories.py  config.py  logging.py  models.py  rate_limit.py  registry.py  settings_service.py
grabarr/grabarr/db/: base.py  session.py
grabarr/grabarr/db/migrations/: env.py
grabarr/grabarr/db/migrations/versions/: 770d9a85f327_initial_schema.py  b8756945d4db_add_profiles_api_key_plain.py
grabarr/grabarr/downloads/: cleanup.py  hybrid.py  manager.py  models.py  search_tokens.py  service.py  sync.py  verification.py
grabarr/grabarr/notifications/: dispatcher.py  models.py
grabarr/grabarr/profiles/: defaults.py  models.py  orchestrator.py  search_cache_model.py  service.py
grabarr/grabarr/torrents/: active_seed.py  bencode.py  tracker.py  webseed.py
grabarr/grabarr/web/: routes.py
grabarr/grabarr/web/templates/: _base.html  dashboard.html  downloads.html  health.html  logs.html  notifications.html  settings.html  sources.html
grabarr/grabarr/web/templates/profiles/: _edit_form.html  edit.html  list.html  prowlarr_setup.html
grabarr/notifications/: encryption.py  models.py
grabarr/profiles/: defaults.py  search_cache_model.py  service.py
grabarr/scripts/: README.md  docker_deploy.py  push.py  release.py
grabarr/specs/001-grabarr-core-platform/: plan.md  research.md  spec.md  tasks.md
grabarr/specs/001-grabarr-core-platform/contracts/: source-adapter.py
grabarr/specs/003-rom-cf-extras/: spec.md
grabarr/tests/fixtures/adapters/: __init__.py  fake_source.py
grabarr/tests/integration/: test_polish_metrics_cleanup.py  test_us1_smoke.py  test_us3_profile_crud.py  test_us4_health_notifications.py
grabarr/tests/unit/: test_ia_romset.py  test_rom_adapters.py  test_torrent_modes.py
grabarr/tests/vendor_compat/: test_external_bypasser.py  test_fingerprint.py  test_internal_bypasser.py  test_mirrors.py  test_naming.py
grabarr/torrents/: models.py  server.py  webseed.py
grabarr/web/: routes.py
grabarr/web/static/css/: tailwind.input.css
grabarr/web/templates/: _base.html  downloads.html  notifications.html  settings.html  sources.html  stats.html
grabarr/web/templates/profiles/: _edit_form.html  edit.html
scripts/: docker-deploy.js  push.js  pyproject-updater.js  release.js  version-updater.js
specs/001-grabarr-core-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-grabarr-core-platform/checklists/: requirements.md
specs/001-grabarr-core-platform/contracts/: admin-api.md  prowlarr-export.json  torznab-xml.md
specs/002-rom-sources/: spec.md
tests/integration/: test_us1_smoke.py  test_us3_profile_crud.py  test_us4_health_notifications.py  test_us5_registry_discovery.py
tests/unit/: test_download_modes.py  test_ia_romset.py  test_rom_adapters.py  test_torrent_modes.py
tests/vendor_compat/: conftest.py  test_imports.py
